--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -9,12 +9,11 @@
     android:background="@drawable/background"
     tools:context="fitnesscompanion.com.View.Profile.AboutUsActivity">
 
-   <ImageView
-        android:layout_margin="20dp"
-        android:layout_gravity="center"
-        android:src="@drawable/logo_drawer"
+    <ImageView
         android:layout_width="150dp"
-        android:layout_height="150dp" />
+        android:layout_height="150dp"
+        android:layout_margin="20dp"
+        android:src="@drawable/logo_drawer" />
 
     <TextView
         android:textSize="18pt"
